--- a/vsem_calibration_tests/EnviBayes_poster_plots.Rmd
+++ b/vsem_calibration_tests/EnviBayes_poster_plots.Rmd
@@ -192,7 +192,11 @@ emulator_info_list <- list(gp_fits = gp_fits, input_bounds = init_design_info$in
 # Induced log joint density (i.e. log unnormalized posterior density) emulator. 
 lpost_emulator <- get_lpost_emulator_obj(emulator_info_list = emulator_info_list, design_info_list = init_design_info, 
                                          computer_model_data = computer_model_data, sig2_eps = init_design_info$init_estimates$best_sig2_eps, 
-                                         theta_prior_params = theta_prior_params)
+                                         theta_prior_params = theta_prior_params, center_output = TRUE, scale_output = TRUE)
+
+lpost_emulator_no_scale <- get_lpost_emulator_obj(emulator_info_list = emulator_info_list, design_info_list = init_design_info, 
+                                                  computer_model_data = computer_model_data, sig2_eps = init_design_info$init_estimates$best_sig2_eps, 
+                                                  theta_prior_params = theta_prior_params, center_output = TRUE, scale_output = FALSE)
 ```
 
 
@@ -286,7 +290,8 @@ samp_round0_info <- list(inputs = samp_round0_theta,
 # lpost emulator predictions at sampled points. 
 lpost_emulator_pred_round0 <- predict_lpost_emulator(lpost_emulator = lpost_emulator, 
                                                      inputs_new_scaled = samp_round0_info$inputs_scaled, 
-                                                     inputs_new_unscaled = samp_round0_info$inputs, include_nugget = TRUE)
+                                                     inputs_new_unscaled = samp_round0_info$inputs, include_nugget = TRUE, 
+                                                     denormalize = FALSE)
 ```
 
 
@@ -337,9 +342,9 @@ plot(plt_var)
 
 # Evaluate Acquisitions. 
 IVAR_lpost_grid_prior_wt <- acquisition_EIVAR_lpost(theta_vals = prior_grid_info$inputs_scaled, 
-                                           lpost_emulator = lpost_emulator, 
-                                           theta_grid_integrate = prior_grid_info$inputs_scaled, 
-                                           verbose = FALSE, include_nugget = TRUE)
+                                                    lpost_emulator = lpost_emulator, 
+                                                    theta_grid_integrate = prior_grid_info$inputs_scaled, 
+                                                    verbose = FALSE, include_nugget = TRUE)
 
 IVAR_post_grid_prior_wt <- acquisition_IVAR_post(theta_vals = prior_grid_info$inputs_scaled, 
                                                  lpost_emulator = lpost_emulator, 
@@ -370,6 +375,62 @@ plot(IVAR_lpost_grid_prior_wt_plot)
 plot(IVAR_post_grid_prior_wt_plot)
 
 ```
+
+```{r}
+
+IVAR_post_grid_prior_wt2 <- acquisition_IVAR_post(theta_vals = prior_grid_info$inputs_scaled, 
+                                                  lpost_emulator = lpost_emulator_test, 
+                                                  theta_grid_integrate = prior_grid_info$inputs_scaled, 
+                                                  verbose = FALSE, include_nugget = TRUE)
+IVAR_post_grid_prior_wt_best_idx2 <- which.max(IVAR_post_grid_prior_wt2)
+
+IVAR_post_grid_prior_wt_plot2 <- get_2d_heatmap_plot(X = prior_grid_info$inputs, 
+                                                     y = -IVAR_post_grid_prior_wt2, param_names = computer_model_data$pars_cal_names, 
+                                                     samples_kde = samp_exact_theta, raster = TRUE, 
+                                                     samples_points = init_design_info$inputs, 
+                                                     bigger_is_better = FALSE, 
+                                                     point_coords = prior_grid_info$inputs[IVAR_post_grid_prior_wt_best_idx,],
+                                                     main_title = "IVAR-post, prior weighted", point_coords_col = "black")
+
+
+grid_pred <- predict_lpost_emulator(inputs_new_scaled = prior_grid_info$inputs_scaled, lpost_emulator = lpost_emulator, unscale = FALSE, uncenter = FALSE)
+
+plt_mean <- get_2d_heatmap_plot(X = prior_grid_info$inputs, y = grid_pred$mean, param_names = computer_model_data$pars_cal_names, 
+                                samples_kde = samp_exact_theta, raster = TRUE, 
+                                samples_points = init_design_info$inputs, 
+                                bigger_is_better = TRUE, 
+                                main_title = "lpost predictive mean")
+plt_var <- get_2d_heatmap_plot(X = prior_grid_info$inputs, y = grid_pred$var, param_names = computer_model_data$pars_cal_names, 
+                               samples_kde = samp_exact_theta, raster = TRUE, 
+                               samples_points = init_design_info$inputs, 
+                               bigger_is_better = TRUE, log_scale = TRUE, main_title = "lpost predictive var")
+
+
+
+
+plot(plt_mean)
+plot(plt_var)
+plot(IVAR_lpost_grid_prior_wt_plot)
+plot(IVAR_post_grid_prior_wt_plot)
+plot(IVAR_post_grid_prior_wt_plot2)
+
+
+```
+
+
+```{r}
+# TODO:
+#    - LOOK AT EFFECT OF CONDITIONING ON INDIVUDAL POINTS TO BETTER UNDERSTAND INTEGRATED VARIANCE. 
+#    - 1D PLOTS OF INTEGRATED VARIANCE
+#    - PLOTS INVESTIGATING THE EFFECT OF TEH DOMINANT TERMS IN IVAR-POST AND IVAR-LPOST
+
+# ALL THESE PLOTS SHOULD BE PUT IN THE IVAR EXPLORATION DOCUMENT. START WITH 1D CASE. 
+```
+
+
+
+
+
 
 ```{r, include = FALSE}
 # Sub-sample approximate posterior samples to use as weight points in acquisitions. 
